Prevent line breaks in the middle of inline <code> blocks
such as `map g (f list) = f (map g list)`

--- a/css/poole.css
+++ b/css/poole.css
@@ -446,3 +446,7 @@ a.pagination-item:hover {
     border-bottom-right-radius: 4px;
   }
 }
+
+code {
+  white-space: pre;
+}
